Update author name in README

--- a/README
+++ b/README
@@ -22,7 +22,7 @@ Tavian Douge
 - Preferred neighbor selection
 - File transfer operations
 
-ddcvb
+Matthew Andersen
 - Logging and terminal mechanisms
 - Optimistic unchoking
 - Bitfield tracking
